Update code, optimization
Deleted unnecessary lines in the code, changed for loops, updated return statements